--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/vision": "^4.3.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
@@ -27,11 +29,13 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
+    "next-sanity": "^10.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "sanity": "^4.3.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
   },
